Fix ixgbe(4) support for ifconfig's vlanhwtag flag.  Disabling this flag will now prevent the driver from stripping vlan tags from packets.

PR:		219390
Submitted by:	Piotr Pietruszewski <piotr.pietruszewski@intel.com>
Reported by:	Charles Goncalves <halfling@halfling.com.br>
Obtained from:	1 week
Sponsored by:	Intel Corporation
Differential Revision:	https://reviews.freebsd.org/D12795

Former-commit-id: de475e7ab9658bcb699b98b987fcda0507d2a574